# fintech_api_backend

./: .env  Makefile  README.md  app.py  main.py  pyproject.toml
app/: app.py
app/api/: api.py
app/api/routers/: index_quoting_controllers.py  news_controllers.py  sentiment_controllers.py  stock_list_controllers.py  stock_quote_controllers.py  stock_quoting_controllers.py  user_controllers.py
app/core/: config.py
app/crud/: market_news_crud.py  sentiment_crud.py  stock_index_crud.py  stock_list_crud.py  stock_news_crud.py  stock_quote_crud.py  user_crud.py
app/db/: db.py
app/models/: entity.py  financial_report.py  news.py  sentiment.py  sentiment_fb.py  stock_index.py  stock_list.py  stock_quoting.py  user.py
app/services/wifeed_service/: news_service.py  sentiment_service.py  stock_index_service.py  stock_list_service.py  stock_quote_service.py  stock_quoting_service.py
